plugins {
    id 'java-library'
    id("com.android.application") version "9.1.0" apply false
    id("com.android.library") version "8.3.0" apply false
}

allprojects {
    repositories {
        google()
        mavenCentral()
        maven { url 'https://jitpack.io' }
    }
}

subprojects {
    apply plugin: 'java-library'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    test {
        useJUnitPlatform()
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.release.set(21)
        options.compilerArgs += ['--enable-preview']
    }

    tasks.withType(JavaExec).configureEach {
        jvmArgs += ['--enable-preview']
    }
}
